Fix: correct views on small screen

--- a/store/src/app/app.component.scss
+++ b/store/src/app/app.component.scss
@@ -1,7 +1,7 @@
 app-nav-bar {
   position: fixed;
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 nz-content {
